--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "tsc": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +22,10 @@
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "class-transformer": "0.5.1",
+    "reflect-metadata": "0.1.13",
+    "typescript": "5.1.6"
   }
 }
